# prj-algo2

tasks/kverhun/: CMakeLists.txt
tasks/kverhun/04-LCS/impl/: main.cpp
tasks/kverhun/04-WordsAlignment/impl/: main.cpp
tasks/kverhun/05-WordsAlignment/impl/: main.cpp
tasks/kverhun/06-BinaryHeap/impl/: BinaryHeap.cpp  BinaryHeap.h  _Library.h
tasks/kverhun/06-BinaryHeap/unit_tests/: binary_heap_tests.cpp
tasks/kverhun/07-Graphs/impl/: Graph.cpp  Graph.h  GraphAlgorithms.cpp  GraphAlgorithms.h  _Library.h
tasks/kverhun/07-Graphs/unit_tests/: graphs_tests.cpp
tasks/kverhun/09-BigData/impl/: main.cpp
